Finally the QR Code not showing Problem solved and going to work on Link Page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 body {
   width: 100%;
+  color: white;
   height: 100vh;
   background: rgb(8, 6, 48);
   background: linear-gradient(
